# zero2prod

./: .actrc  .env  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  app.http  configuration-ci.yml  configuration.yml  deny.toml  spec.yml  sqlx-data.json
.cargo/: audit.toml  config.toml
.devcontainer/: Dockerfile  devcontainer.json  devcontainer.old.jsonc  docker-compose.yml
.github/workflows/: audit.yml  coverage.yml  dependency-security-audit.yml  fly.yml  general.yml  github-ci.yml
configuration/: base.yml  development.yml  production.yml
migrations/: 20210611165518_create_subscriptions_table.sql  20210924002159_create_subscriptions_table.sql  20211002040251_make_status_not_null_in_subscriptions.sql  20211002040828_create_subscription_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  mod.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs  subscribe.rs
tests/api/: health_check.rs  helpers.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
tests/common/: mod.rs
xtask/: Cargo.toml
xtask/src/: db_config.rs  lib.rs  main.rs  tasks.rs
xtask/src/tasks/: ci.rs  coverage.rs  database.rs  distribute.rs  test.rs
zero2prod/: .env  Cargo.toml  Dockerfile  bacon.toml  configuration.yml  fly.toml  flylogs.sh  sqlx-data.json
zero2prod/configuration/: base.yml  local.yml  production.yml
zero2prod/migrations/: 20230126021009_create_subscriptions_table.sql  20230419031701_make_status_not_null_in_subscriptions.sql  20230419134100_create_subscription_tokens_table.sql  20230425012802_create_users_table.sql  20230511105815_seed_user.sql  20230615174509_create_idempotency_table.sql  20230627013457_relax_null_checks_on_idempotency.sql  20230627163540_create_newsletter_issues_table.sql  20230627164618_create_issue_delivery_queue_table.sql  20230628010035_add_retries_to_issue_delivery_queue_table.sql  20230628015924_remove_null_contraint_from_retry_after.sql
zero2prod/src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  error.rs  idempotency.rs  idempotency_remover_worker.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs
zero2prod/src/authentication/: middleware.rs  password.rs  user.rs
zero2prod/src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
zero2prod/src/idempotency/: key.rs  persistence.rs
zero2prod/src/routes/: admin.rs  health_check.rs  home.rs  login.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
zero2prod/src/routes/admin/: dashboard.rs  logout.rs  newsletters.rs
zero2prod/src/routes/admin/newsletters/: get.rs  post.rs
zero2prod/src/routes/admin/password/: get.rs  post.rs
zero2prod/src/routes/home/: home.html
zero2prod/src/routes/login/: get.rs  login.html  post.rs
zero2prod/tests/: health_check.rs
zero2prod/tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
