[package]
name = "zero2prod"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.0.0-beta.8"
actix-http = "3.0.0-beta.9"
chrono = { version = "0.4.15", default-features = false, features = [
    "clock",
    "std",
] }
config = "0.11.0"
reqwest = { version = "0.11", features = [
    "json",
    "rustls-tls",
], default-features = false }
serde = { version = "1", features = ["derive"] }
serde-aux = "2.3.0"
tracing = { version = "0.1", features = ["log"] }
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.2.12", features = [
    "registry",
    "env-filter",
] }
tracing-bunyan-formatter = "0.2.6"
tracing-log = "0.1.2"
tracing-actix-web = "0.4.0-beta.8"
unicode-segmentation = "1.8.0"
uuid = { version = "0.8.1", features = ["v4"] }
validator = "0.14.0"
rand = { version = "0.8", features = ["std_rng"] }
thiserror = "1.0.29"
anyhow = "1.0.44"


[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",
]

[dev-dependencies]
actix-rt = "2"
claim = "0.5.0"
fake = "~2.3"
linkify = "0.5.0"
once_cell = "1.8.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
serde_json = "1.0.68"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5"
