[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = { version = "0.4.26", default-features = false, features = ["clock"] }
man = "0.3.0"
owo-colors = "3.5.0"
