[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
axum = "0.6.15"
chrono = { version = "0.4.24", default-features = false, features = ["clock"] }
config = "0.13.3"
http = "0.2.9"
hyper = "0.14.26"
reqwest = { version = "0.11.16", features = [
    "rustls",
    "json",
], default-features = false }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.160", features = ["derive"] }
serde-aux = "4.2.0"
sqlx = { version = "0.6.3", features = [
    "offline",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "runtime-tokio-rustls",
], default-features = false }
tokio = { version = "1.27.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["trace", "request-id", "util"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-bunyan-formatter = "0.3.7"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
unicode-segmentation = "1.10.1"
uuid = { version = "1.3.1", features = ["v4", "serde"] }
validator = "0.16.0"

[dev-dependencies]
claims = "0.7.1"
once_cell = "1"
# These versions of quickcheck required for rand_core compatibility.
fake = "~2.3.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
wiremock = "0.5"
