[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
anyhow = "1.0.71"
argon2 = { version = "0.5.0", features = ["std"] }
axum = { version = "0.6.18", features = ["tracing"] }
axum-extra = { version = "0.7.4", features = ["cookie"] }
axum-flash = "0.7.0"
axum-macros = "0.3.7"
axum_session = { version = "0.2.3", features = ["redis-db"], default-features = false }
#axum_session_auth = { version = "0.2.0", default-features = false, features = ["redis-db"] }
base64 = "0.21.1"
chrono = { version = "0.4.24", default-features = false, features = ["clock"] }
config = "0.13.3"
htmlescape = "0.3.1"
http = "0.2.9"
hyper = "0.14.26"
rand = { version = "0.8.5", features = ["std_rng"] }
redis = { version = "0.23.0", features = ["tokio-comp"] }
reqwest = { version = "0.11.18", features = [
    "cookies",
    "json",
    "rustls-tls",
], default-features = false }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.163", features = ["derive"] }
serde-aux = "4.2.0"
sqlx = { version = "0.6.3", features = [
    "offline",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "runtime-tokio-rustls",
], default-features = false }
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["trace", "request-id", "util"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-bunyan-formatter = "0.3.7"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
unicode-segmentation = "1.10.1"
urlencoding = "2.1.2"
uuid = { version = "1.3.3", features = ["v4", "serde"] }
validator = "0.16.0"

[dev-dependencies]
claims = "0.7.1"
fake = "~2.3.0"             # Versions of fake required for rand_core compatibility
linkify = "0.9.0"
once_cell = "1"
quickcheck = "0.9.2"        # Versions of quickcheck required for rand_core compatibility
quickcheck_macros = "0.9.1" # Versions of quickcheck required for rand_core compatibility
serde_json = "1.0.96"
wiremock = "0.5"
